[package]
name = "iced_crash_test"
version = "0.1.0"
authors = ["spamviech <spamviech@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.iced]
# ices_aw only works with git-version for now
git = "https://github.com/hecrj/iced"
# rev = "4b8ba8309f6645cdcb5bd605f8dd88097f8ee5a7"
branch = "lyon-0.17"
# rev = "bfa08d6d69e689d6951d3bf36e00f9e5b7fe225d"
features = ["glow","glow_canvas"]